--- a/Projectile_motion_with_air_resistance.ipynb
+++ b/Projectile_motion_with_air_resistance.ipynb
@@ -30,7 +30,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "In order to simulate the projectile motion taking in account the air resistance as well, F(drag)= - kv.\n",
+        "In order to simulate the projectile motion taking in account the air resistance as well (or the drag force) \n",
         "\n",
         "Note : time step (dt) would be used in order to get the status of the projectile at each instance.\n",
         "\n",
